# d4s

./: .gitignore  Justfile  README.md
ansible/: .gitignore  Justfile  control_plane_playbook.yaml  day_one_playbook.yaml  kubernetes_playbook.yaml  local_ca_install_playbook.yaml  networking_playbook.yaml  worker_node_playbook.yaml
terraform/: Justfile
terraform/argo-cd-configure/: main.tf  provider.tf  variables.tf
terraform/base-helm/: main.tf  terraform.tf  variables.tf
terraform/day-one/: Justfile  main.tf  outputs.tf  providers.tf  terraform.tf  variables.tf
terraform/gitea-configure/: main.tf  provider.tf  terraform.tf  variables.tf
terraform/gitea-create-repos/: main.tf  provider.tf  terraform.tf  variables.tf
terraform/grafana-instance/: main.tf  variables.tf
terraform/k8s-cluster/: Vagrantfile  main.tf  outputs.tf  providers.tf  terraform.tf  variables.tf
terraform/kubernetes-ca/: main.tf  outputs.tf  terraform.tf  variables.tf
terraform/lab-dns/: Justfile  main.tf  variables.tf
terraform/postgres-cluster/: main.tf  terraform.tf  variables.tf
terraform/test-kubernetes-ca/: Justfile  main.tf  (+2 more)
terragrunt/: .gitignore  Justfile  env.hcl
workload/lab-dns/app/e2e_tests/: Cargo.toml
workload/lab-dns/app/e2e_tests/src/: lib.rs
workload/lab-dns/app/srv-lib/: Cargo.toml
workload/lab-dns/app/srv-lib/src/: config.rs  lib.rs  signals.rs  storage.rs
workload/lab-dns/app/srv-lib/src/api_srv/: api.rs  mod.rs
workload/lab-dns/app/srv-lib/src/dns_srv/: mod.rs  request_handler.rs
workload/lab-dns/app/srv-lib/src/webhook_srv/: api.rs  mod.rs
(+176 files in other folders)
