[package]
name = "srv-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
dashmap = "6.1.0"
hickory-server = "0.24.2"
thiserror = "2.0.9"
tracing = "0.1.41"
config = "0.14.0"

tokio = { version = "1.42.0", features = ["net"] }

axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie", "multipart"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }

reqwest = { version = "^0.12", features = ["json", "rustls-tls"], no-default-features = true }

webhook = { path = "../generated/webhook" }
webhook-client = { path = "../generated/webhook-client" }
futures = "0.3.31"

